smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/trait-name-syntax.smithy
// Parse error at line 4, column 10 near `#f`: Expected a valid identifier character, but found '#'
namespace foo.bar

@invalid##foo..bar
string MyString
